--- a/.github/workflows/main_react-webapp.yml
+++ b/.github/workflows/main_react-webapp.yml
@@ -33,7 +33,7 @@ jobs:
         uses: actions/upload-artifact@v4
         with:
           name: node-app
-          path: .
+          path: ./dist
 
   deploy:
     runs-on: ubuntu-latest
@@ -64,5 +64,6 @@ jobs:
         with:
           app-name: 'react-webapp'
           slot-name: 'Production'
-          package: .
+          publish-profile: ${{secrets.
+          package: ./dist
           
