--- a/.github/workflows/main_react-webapp.yml
+++ b/.github/workflows/main_react-webapp.yml
@@ -64,6 +64,6 @@ jobs:
         with:
           app-name: 'react-webapp'
           slot-name: 'Production'
-          publish-profile: ${{secrets.
+          publish-profile: ${{secrets.AZURE_WEBAPP_PUBLISH_PROFILE}}
           package: ./dist
           
