--- a/.github/workflows/main_frontend-azure.yml
+++ b/.github/workflows/main_frontend-azure.yml
@@ -64,5 +64,6 @@ jobs:
         with:
           app-name: 'frontend-azure'
           slot-name: 'Production'
+          publish-profile: ${{ secrets.AZURE_WEBAPP_PUBLISH_PROFILE }}
           package: ./dist
           
