--- a/.github/workflows/main_frontend-azure.yml
+++ b/.github/workflows/main_frontend-azure.yml
@@ -65,5 +65,5 @@ jobs:
           app-name: 'frontend-azure'
           slot-name: 'Production'
           publish-profile: ${{ secrets.AZURE_WEBAPP_PUBLISH_PROFILE }}
-          package: ./dist
+          package: .
           
